--- a/recipes/bbq-chicken.html
+++ b/recipes/bbq-chicken.html
@@ -6,5 +6,22 @@
 </head>
 <body>
     <h1>BBQ Chicken</h1>
+    <img src="../FoodImages/Simply-Recipes-Grilled-BBQ-Chicken-LEAD-10-03fd9892eaae4ce1a8a3f4c949657cfd.jpg"
+    width="500"
+    height="250"
+    > 
+    <h3>Description</h3>
+    <p>As you can see here there is bbq chicken. It is looks very tasty and the best thing
+        about this that it looks like this in real life too. I find it to be amazing and 
+        its probably the best kind of chicken to eat!
+    </p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Chicken</li>
+        <li>BBQ Sauce</li>
+        <li>Grill</li>
+        <li>Butter</li>
+    </ul>
+
 </body>
 </html>
