The bbqchicken is done git status cd

--- a/recipes/bbq-chicken.html
+++ b/recipes/bbq-chicken.html
@@ -22,6 +22,16 @@
         <li>Grill</li>
         <li>Butter</li>
     </ul>
+    <h3>Steps to make it</h3>
+    <ol>
+        <li>Mix the chicken with the bbq sauce</li>
+        <li>Put melted butter over the chicken</li>
+        <li> Marinate the chicken</li>
+        <li> Put the chicken on the grill</li>
+        <li> Wait until the chicken is giving a <strong>brown</strong> and <strong>black 
+            color
+        </strong></li>
+    </ol> 
 
 </body>
 </html>
