added the pizza

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
 </head>
 <body>
     <h1> Odin recipes</h1>
-    <a href="recipes/bbq-chicken.html">BBQ Chicken</a>
-    
+    <ul>
+        <li><a href="recipes/bbq-chicken.html">BBQ Chicken</a></li>
+        <li><a href="recipes/pizza.html">Pizza</a></li>
+        
+
+
+    </ul>
+
 </body>
 
 </html>
