--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <ul>
         <li><a href="recipes/bbq-chicken.html">BBQ Chicken</a></li>
         <li><a href="recipes/pizza.html">Pizza</a></li>
-        <li><a href="recipes/Lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
         
 
 
